--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -16,6 +16,13 @@ WIFI_WAIT_TIMEOUT_SELECT = 0
 ##################################################
 LPPE_SRN_DATA_SCAN_INJECT_TIME=2
 
+##################################################
+# Identify this target as OTA updated or new
+# 0 - New target
+# 1 - OTA updated
+##################################################
+OTA_UPDATED_TARGET=0
+
 ################################
 # NLP Settings
 ################################
@@ -37,7 +44,7 @@ LPPE_SRN_DATA_SCAN_INJECT_TIME=2
 # without EULA consent, but the uncertainty can be high.
 # QNP preferred mode prefers QNP when there is EULA consent,
 # otherwise OSNLP is used.
-NLP_MODE = 1
+NLP_MODE = 4
 NLP_MODE_EMERGENCY = 2
 NLP_TOLERANCE_TIME_FIRST = 5000
 NLP_TOLERANCE_TIME_AFTER = 20000
@@ -53,13 +60,7 @@ OSNLP_PACKAGE = com.google.android.gms
 # REGION_OSNLP_PACKAGE:
 # This value will be used as alternative
 # for particular region where default NLP is not functional.
-REGION_OSNLP_PACKAGE = com.tencent.android.location
-
-# Threshold period for ZPP triggers
-ZPP_TRIGGER_THRESHOLD=86400000
-# Accuracy threshold for ZPP positions
-# less accurate positions are ignored
-ZPP_ACCURACY_THRESHOLD=20000
+#REGION_OSNLP_PACKAGE =
 
 ###################################
 # GEOFENCE SERVICES
